# Xynoxa-Desktop-Client

./: .gitignore  README.de.md  README.md  build-and-install.sh  components.json  index.html  package-lock.json  package.json  rename-artifacts.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  xynoxa.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  db.rs  lib.rs  sync.rs
src/components/ui/: input.tsx
src/pages/: Dashboard.tsx  Login.tsx  Setup.tsx
