[package]
name = "xynoxa-desktop-client"
version = "1.0.0-Alpha1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
keyring = "3.6.3"
notify = "8.2.0"
tokio-util = { version = "0.7.17", features = ["codec", "io"] }
tokio = { version = "1.48.0", features = ["full"] }
rusqlite = { version = "0.33", features = ["bundled"] }
log = "0.4"
simplelog = "0.12"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
mime_guess = "2"
urlencoding = "2"
